tests/ui/wchz_nul_mid.stderr
error: C-style string cannot contain nul characters
 --> $DIR/wchz_nul_mid.rs:3:35
  |
3 | const NUL_MID: &[wchar_t] = wchz!("nul byte\0 mid");
  |                                   ^^^^^^^^^^^^^^^^
