tests/ui/wchz_nul_mid.rs
use wchar::{wchar_t, wchz};

const NUL_MID: &[wchar_t] = wchz!("nul byte\0 mid");

fn main() {}
